argocd/03-argo-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`operator.localhost`)
      priority: 10
      services:
        - name: argocd-server
          port: http
    - kind: Rule
      match: Host(`operator.localhost`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls:
    certResolver: default
    options: {}
